--- a/index.html
+++ b/index.html
@@ -97,6 +97,81 @@ body {
 }
 
     </style>
+    /* 🌐 رسپانسیو برای مودال و دکمه‌ها */
+@media (max-width: 992px) {
+  .model {
+    width: 85%;
+    padding: 3rem;
+  }
+
+  .model h1 {
+    font-size: 20px;
+  }
+
+  .model p {
+    font-size: 15px;
+  }
+
+  .show-model {
+    padding: 12px 25px;
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 768px) {
+  body {
+    flex-direction: column; /* دکمه‌ها زیر هم */
+    gap: 15px;
+  }
+
+  .model {
+    width: 90%;
+    padding: 2rem;
+  }
+
+  .model h1 {
+    font-size: 18px;
+  }
+
+  .model p {
+    font-size: 14px;
+    text-align: justify;
+  }
+
+  .show-model {
+    width: 80%;
+    padding: 12px;
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 480px) {
+  .model {
+    width: 95%;
+    padding: 1.5rem;
+  }
+
+  .model h1 {
+    font-size: 16px;
+  }
+
+  .model p {
+    font-size: 13px;
+  }
+
+  .show-model {
+    width: 90%;
+    font-size: 13px;
+    padding: 10px;
+  }
+
+  .close-model {
+    font-size: 3rem;
+    right: 1rem;
+    top: 1rem;
+  }
+}
+
 </head>
 <body>
     <body>
@@ -155,3 +230,4 @@ body {
     <script src="model.js"></script>
 </body>
 </html>
+
